# BookLibrary

./: .gitignore  README.md  pyproject.toml
booklib/: __init__.py  cli.py  storage.py
scripts/: dev-notes.md  lint.sh  release-checklist.md  sample-data.json  seed.py
tests/: test_storage.py
